# CoCwxW

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: id_enum.cpp  id_enum.hpp  main.cpp  main_frame.cpp  main_frame.hpp
src/backend/: character.cpp  character.hpp
src/panels/: abstract_panel.cpp  abstract_panel.hpp  coc_view_panel.cpp  coc_view_panel.hpp  default_panel.cpp  default_panel.hpp  left_panel.cpp  left_panel.hpp  right_panel.cpp  right_panel.hpp
